# sonorizer

./: CMakeLists.txt  README.md
include/: wavutils.h
src/: main.cpp
